Work with Sharing Token to solve problme of cross domains auth

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=8080
 DATABASE_URL=mongodb://localhost:27017/apiExercise
 SECRET_OR_KEY_JWT=einverdammtesgeheimeszeichen
+SECRET_OR_KEY_JWT_Temp=fuckeinverdammtesgeheimeszeichen
 EXP_JWT='100d'
